--- a/Expressions and Data Types.ipynb
+++ b/Expressions and Data Types.ipynb
@@ -62,12 +62,21 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fe655cd8",
+   "metadata": {},
+   "source": [
+    "## Numeric Data Types\n",
+    "Python has two numeric data types: ints and floats."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2f5fcfff-4fb7-46d3-9425-369884dc713a",
    "metadata": {
     "tags": []
    },
    "source": [
-    "## Integers (int)"
+    "### Integers (int)"
    ]
   },
   {
@@ -105,7 +114,7 @@
     "tags": []
    },
    "source": [
-    "## Floats"
+    "### Floats"
    ]
   },
   {
@@ -142,16 +151,16 @@
    "source": [
     "We can use the following operations on ints and floats to do calculations.\n",
     "\n",
-    "| Operator   | Name           |\n",
-    "|------------|----------------|\n",
-    "| `a + b`    | Addition       |\n",
-    "| `a - b`    | Subtraction    |\n",
-    "| `a * b`    | Multiplication |\n",
-    "| `a / b`    | Division       | \n",
-    "| `a // b`   | Floor division |\n",
-    "| `a % b`    | Modulus        |\n",
-    "| `a ** b`   | Exponentiation | \n",
-    "| `-a`       | Negation       |\n",
+    "| Operator   | Name           | Description                                       |\n",
+    "|------------|----------------|---------------------------------------------------|\n",
+    "| `a + b`    | Addition       | Sum of `a` and `b`                                |\n",
+    "| `a - b`    | Subtraction    | Difference of `a` and `b`                         |\n",
+    "| `a * b`    | Multiplication | Product of `a` and `b`                            |\n",
+    "| `a / b`    | True division  | Quotient of `a` and `b`                           |\n",
+    "| `a // b`   | Floor division | Quotient of `a` and `b`, removing fractional parts|\n",
+    "| `a % b`    | Modulus        | Remainder after division of `a` by `b`            |\n",
+    "| `a ** b`   | Exponentiation | `a` raised to the power of `b` (`a`<sup>`b`</sup>)|\n",
+    "| `-a`       | Negation       | The negative of `a`                               |\n",
     "\n",
     "We can also use parentheses for grouping."
    ]
@@ -165,7 +174,7 @@
    "source": [
     "# Uncomment the below code one line at a time.\n",
     "# print(1 + 2)\n",
-    "# print(3 * 4)\n",
+    "# print(3 * 4.0)\n",
     "# print(1 + 3 * 4)\n",
     "# print((1 + 3) * 4)\n",
     "# print(2**3)\n",
@@ -229,12 +238,21 @@
   },
   {
    "cell_type": "markdown",
+   "id": "41d8f4a3",
+   "metadata": {},
+   "source": [
+    "## Sequence Data Types\n",
+    "Sequences are ordered collections of data. Python has three sequence data types: strings, lists, and tuples."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b2eb6018-d90c-428e-a155-31dcfae1ca56",
    "metadata": {
     "tags": []
    },
    "source": [
-    "## Strings (str)"
+    "### Strings (str)"
    ]
   },
   {
@@ -244,7 +262,9 @@
    "source": [
     "Strings (shortened to `str` in Python) is the data type for text in Python. Strings are surrounded by single or double quotes.\n",
     "\n",
-    "Examples of strings include `'Hello'`, `\"I am 3!\"`, and even the empty string `\"\"`."
+    "Examples of strings include `'Hello'`, `\"I am 3!\"`, and even the empty string `\"\"`.\n",
+    "\n",
+    "Strings are sequences of characters. In the string `\"Hi Bye\"`, the first character in the sequence is `\"H\"`, the next is `\"e\"`, then `\" \"`, then `\"B\"`, up until the final character in the sequence, `\"e\"`."
    ]
   },
   {
@@ -265,63 +285,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cde176d-40ea-42f4-828b-de0b1bef1dba",
+   "id": "7c13a369",
    "metadata": {},
    "source": [
-    "We can get the length of a string using the `len()` function."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d1c6bf4c-2334-4ca3-b0b7-0803a416e1d5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Print the length of the string \"hello\".\n",
-    "print(len(\"hello\"))"
+    "### Lists"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "cb9e5204-906c-4726-8252-90b74681290c",
-   "metadata": {},
-   "source": [
-    "We can also access the individual characters in a string by using square brackets (`[]`) with an index inside.\n",
-    "\n",
-    "Strings are zero-indexed, which means that the first character is at index 0. For example, `\"Sawyer\"[0]` corresponds to \"S\", `\"Sawyer\"[1]` corresponds to \"a\", and so on."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1d151901-3e9b-4302-9340-18aef98f2751",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "example_string = \"Hello there!\"\n",
-    "\n",
-    "# Uncomment one at a time and guess what will get printed.\n",
-    "# print(example_string[0])    # Access the first character in the string.\n",
-    "# print(example_string[1])\n",
-    "# print(example_string[2])\n",
-    "# print(example_string[6])\n",
-    "# print(\"What's your name?\"[2])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "473d0d47-fa6b-4343-b435-63b9bab987db",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "## Lists"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b9e2730e-10c5-4beb-877b-7e1564d497a0",
+   "id": "f37d41f3",
    "metadata": {},
    "source": [
     "A list is a data type that can store multiple values. Lists are within square brackets (`[` and `]`), and each item is seperated with a comma.\n",
@@ -334,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf815692-c546-45bb-9291-f98079279c0b",
+   "id": "74f3031a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,32 +323,125 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6cd8ef3-d5f4-4bec-b07d-89cccfad7bdd",
+   "id": "5548644a",
    "metadata": {},
    "source": [
-    "Similarly to strings, we can use the `len()` function to get the length of a list.\n",
+    "Lists are mutable, which means they can be modified after creating them. For example, we can use the method* `.append()` to add an item to a list, and the method `.pop()` to remove the last item in a list.\n",
     "\n",
-    "We can also use indexing (`[]`) to access the items within a list."
+    "*A **method** is a function that only works with a specific data type. ints, strings, lists, etc., all contain several methods you can use with them."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad202552-2a6e-441b-a77c-708b82b232ae",
+   "id": "e9c10ada",
    "metadata": {},
    "outputs": [],
    "source": [
-    "example_list = [\"hello\", \"goodbye\", \"How are you?\"]\n",
-    "# print(example_list)\n",
+    "# Create a list and display it.\n",
+    "example = [1, 2, 3]\n",
+    "print(example)\n",
+    "\n",
+    "# Attach the number 4 to the end of the list and display it.\n",
+    "example.append(4)\n",
+    "print(example)\n",
+    "\n",
+    "# Remove the last element from the list and display result.\n",
+    "example.pop()\n",
+    "print(example)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f687f59",
+   "metadata": {},
+   "source": [
+    "### Tuples"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f284f0d5",
+   "metadata": {},
+   "source": [
+    "Tuples are very similar to lists, but they are immutable. This means that they cannot be changed after creation. Tuples are created in parentheses instead of square brackets."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d559233",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tuple_example = (1, 2, 3)\n",
+    "print(tuple_example)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2cde176d-40ea-42f4-828b-de0b1bef1dba",
+   "metadata": {},
+   "source": [
+    "We can get the length of a sequence using the `len()` function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1c6bf4c-2334-4ca3-b0b7-0803a416e1d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Print the length of strings. Uncomment one at a time:\n",
+    "# print(len(\"hello\"))\n",
+    "# print(len(\"How are you?\"))\n",
+    "\n",
+    "# Print the length of lists. Uncomment one at a time:\n",
+    "# print(len([1, 2, 3]))\n",
+    "# print(len([[1, 2], [3, 4], [5, 6]]))\n",
     "\n",
     "\n",
-    "# Uncomment code below and guess the output.\n",
-    "# print(len(example_list))\n",
+    "# Print the length of tuples. Uncomment one at a time:\n",
+    "# print(len((\"Hello\", \"Bye\")))\n",
+    "# print(len((\"I'm Bob\", \"I'm Tim\", \"I'm Jimmy\")))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb9e5204-906c-4726-8252-90b74681290c",
+   "metadata": {},
+   "source": [
+    "We can access the individual elements in a sequence by using square brackets (`[]`) with an index inside.\n",
+    "\n",
+    "Sequences in Python are zero-indexed, which means that the first element is at index 0. For example, `\"Sawyer\"[0]` corresponds to \"S\", `\"Sawyer\"[1]` corresponds to \"a\", and so on."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d151901-3e9b-4302-9340-18aef98f2751",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "example_string = \"Hello there!\"\n",
+    "\n",
+    "# Uncomment one at a time and guess what will get printed.\n",
+    "# print(example_string[0])    # Access the first character in the string.\n",
+    "# print(example_string[1])\n",
+    "# print(example_string[2])\n",
+    "# print(example_string[6])\n",
+    "# print(\"What's your name?\"[2])\n",
+    "\n",
+    "example_list = [1, 2, 3]\n",
     "# print(example_list[0])\n",
     "# print(example_list[2])\n",
     "\n",
+    "example_tuple = (\"Hello\", \"Bye\")\n",
+    "# print(example_tuple[1])\n",
+    "\n",
     "# For a more complicated example, let's try with a list that contains lists inside it.\n",
-    "# nested_list = [[1, 2], [3, 4], [5, 6]]\n",
+    "nested_list = [[1, 2], [3, 4], [5, 6]]\n",
     "# print(nested_list[2])"
    ]
   }
@@ -397,7 +462,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
