Checking if changes were made.

--- a/Conditional Statements.ipynb
+++ b/Conditional Statements.ipynb
@@ -13,7 +13,9 @@
    "id": "03fa685e-55a5-4e7d-bf02-f4a2b04d64c6",
    "metadata": {},
    "source": [
-    "Using an **if statement**, we can make a block of code only execute if a certain condition is true."
+    "Using an **if statement**, we can make a block of code only execute if a certain condition is true.\n",
+    "\n",
+    "(A code block is a group of code indented after a colon.)"
    ]
   },
   {
@@ -149,7 +151,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
