--- a/Python Fundamentals.ipynb
+++ b/Python Fundamentals.ipynb
@@ -41,12 +41,22 @@
     "\n",
     "The variable didn't have to be named `age`. If we wanted to specify that this is Bob's age (and not John or Stacy's age), we could have written the line as `bob_age = 13`. You as a coder can decide the best name for your variable. It should be a name that makes it clear what information the variable points to, since otherwise you (and anyone else working with your code) can easily get confused and not remember which variables store what information. When you create a variable, you must assign the variable an object to point at.\n",
     "\n",
+    "There are certain rules for naming variables:\n",
+    "\n",
+    "1) A variable must start with a letter or underscore (`_`).\n",
+    "2) A variable name can only contain letters, numbers, and underscores (`_`). They cannot contain spaces or other symbols.\n",
+    "3) A variable cannot share a name with any built-in keywords in Python.\n",
+    "\n",
+    "Tip: when naming a variable that contains multiple words, it is recommended to name them using **snake_case** (also known as \"lower_case_with_underscores\"). snake_case is a style of naming variables where all words are lowercase and all spaces are replaced by underscores. For example, if you wanted a variable storing delicious foods, you'd name it `delicious_foods`.\n",
+    "\n",
+    "While it's generally recommended to name variables using snake_case, there is one notable exception: when working with a company, it is best to stay consistant with whatever style they use. For example, if they prefer to name variables using camelCase (first letter lowercase, then all future words beginning in a capital letter), you should copy their style and name your variable `deliciousFoods` instead.\n",
+    "\n",
     "Below are some examples of creating variables:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "da5dab75-2997-4ec2-a8dc-d6a16ca7db39",
    "metadata": {},
    "outputs": [],
@@ -63,18 +73,67 @@
   },
   {
    "cell_type": "markdown",
-   "id": "822c371f-0f3b-4b45-922b-40beeea9d519",
+   "id": "7fcad7ce-5da7-4fda-a7fd-cc48e90780c5",
    "metadata": {},
    "source": [
-    "You may have noticed that none of these variable names contain spaces. That is because there are certain rules for naming variables:\n",
+    "<!-- Since variables merely point to the object they are assigned to -->\n",
+    "We can use the `is` operator to check if two variables are referencing the same object."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d32ba7be-6e72-4dd5-8fed-8be3fe78d567",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "var1 points to the same object as var2: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Assign two variables to the same object.\n",
+    "var1 = [1, 2, 3]\n",
+    "var2 = var1\n",
     "\n",
-    "1) A variable must start with a letter or underscore (`_`).\n",
-    "2) A variable name can only contain letters, numbers, and underscores (`_`). They cannot contain spaces or other symbols.\n",
-    "3) A variable cannot share a name with any built-in keywords in Python.\n",
+    "# Confirm that both variables point to the same object.\n",
+    "print(f\"var1 points to the same object as var2: {var1 is var2}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73478e03-4f73-4a3d-932f-7631d80724e6",
+   "metadata": {},
+   "source": [
+    "Likewise, we can use `is not` to check if two variables point to different objects."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "89c7a7a4-ed35-4b3c-be09-b84f76b4f22a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Does var3 point to the same object as var4?: False\n",
+      "var3 points to a different object from var4: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Assign variables to two seperate objects.\n",
+    "var3 = [1, 2, 3]\n",
+    "var4 = [1, 2, 3]\n",
     "\n",
-    "Tip: when naming a variable that contains multiple words, it is recommended to name them using **snake_case** (also known as \"lower_case_with_underscores\"). snake_case is a style of naming variables where all words are lowercase and all spaces are replaced by underscores. For example, if you wanted a variable storing delicious foods, you'd name it `delicious_foods`.\n",
-    "\n",
-    "While it's generally recommended to name variables using snake_case, there is one notable exception: when working with a company, it is best to stay consistant with whatever style they use. For example, if they prefer to name variables using camelCase (first letter lowercase, then all future words beginning in a capital letter), you should copy their style and name your variable `deliciousFoods` instead."
+    "# Even though both objects look the same, they are stored on different parts of memory!\n",
+    "print(f\"Does var3 point to the same object as var4?: {var3 is var4}\")\n",
+    "print(f\"var3 points to a different object from var4: {var3 is not var4}\")"
    ]
   },
   {
@@ -108,10 +167,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "cd925f1b-70be-4bf2-9f78-bbd44b24172f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# Exaluate the expression 23 > 9, then print the result.\n",
     "print(23 > 9)"
@@ -141,7 +208,6 @@
    "cell_type": "markdown",
    "id": "fe655cd8",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -169,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "dd517713-4e28-4de0-80f0-361332365448",
    "metadata": {},
    "outputs": [],
@@ -207,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "756c49c6-c38b-4cc9-a998-377978cbe6d5",
    "metadata": {},
    "outputs": [],
@@ -308,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "id": "92bfdf12-2856-4758-a925-49c02e68297f",
    "metadata": {},
    "outputs": [
@@ -366,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "51a3ecbb-a710-41c2-9e26-0b0516dca5eb",
    "metadata": {},
    "outputs": [],
@@ -430,20 +496,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "e9c10ada",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 3]\n",
-      "[1, 2, 3, 4]\n",
-      "[1, 2, 3]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create a list and display it.\n",
     "example = [1, 2, 3]\n",
@@ -476,18 +532,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "5d559233",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1, 2, 3)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tuple_example = (1, 2, 3)\n",
     "print(tuple_example)"
@@ -497,7 +545,6 @@
    "cell_type": "markdown",
    "id": "9b361794-e238-47dc-ade4-cd509031fcdc",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -535,20 +582,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "dd64ea76-a863-4551-91f0-7d1576c6dd8b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "H\n",
-      "9\n",
-      "False\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Display the element at index 0 in a string.\n",
     "print(\"Hello, class!\"[0])\n",
@@ -576,20 +613,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "id": "32f34d81-6fc8-4759-912c-e87c524052bf",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "?\n",
-      "orange\n",
-      "Sup?\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Display the last element in the string.\n",
     "print(\"How are you?\"[-1])\n",
@@ -611,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "id": "1d151901-3e9b-4302-9340-18aef98f2751",
    "metadata": {},
    "outputs": [],
@@ -661,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 10,
    "id": "e94c8d65-443d-4b50-a39a-b0bec7580a4a",
    "metadata": {},
    "outputs": [
@@ -694,12 +721,12 @@
    "id": "7fdc242b-d08b-4d53-846c-118e009294ea",
    "metadata": {},
    "source": [
-    "Changing the items in a list this way is called item assignment, as we are assigning the index a new item. Since strings and tuples are immutable, trying to assign an item to them causes an error message."
+    "Changing the items in a list this way is called item assignment, as we are assigning a new item to the chosen index. Since strings and tuples are immutable, trying to assign an item to them causes an error message."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 12,
    "id": "6f53658f-7d28-43d1-bc53-658e1a39ae9b",
    "metadata": {},
    "outputs": [
@@ -710,7 +737,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_33328\\4041266014.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mexample_string\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"Hello\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;31m# Try to change the H into a B.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mexample_string\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"B\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "Cell \u001b[1;32mIn[12], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m example_string \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHello\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# Try to change the H into a B.\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m example_string[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mB\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
       "\u001b[1;31mTypeError\u001b[0m: 'str' object does not support item assignment"
      ]
     }
@@ -731,14 +758,14 @@
     "#### Slicing\n",
     "Whereas indexing only accesses one element of a sequence at a time, we can use slicing to access several at once. Slices are written in the form of `sequence_name[starting_index:index_to_end_before]`. For example, if you wanted to get a slice of the string \"How are you\" starting at index 1 (inclusive) and ending at index 3 (exclusive), you'd type `\"How are you\"[1:3]`.\n",
     "\n",
-    "Below are two examples of slices.\n",
+    "Below are some examples of slicing.\n",
     "\n",
     "<!-- Making a copy of part of a sequence is called **slicing**.  -->"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 13,
    "id": "d96d875e-2023-45f9-bfa3-8c771cc4d52c",
    "metadata": {},
    "outputs": [
@@ -810,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 14,
    "id": "1eec5187-8882-4b13-af30-4917a7bd1f88",
    "metadata": {},
    "outputs": [
@@ -857,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 15,
    "id": "7d296ec4-7b8b-4b08-bc58-ac24cac23df6",
    "metadata": {},
    "outputs": [
@@ -888,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "ddf3011d-2aaa-48e6-a793-b97602a93a8a",
    "metadata": {},
    "outputs": [
@@ -928,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "id": "d1c6bf4c-2334-4ca3-b0b7-0803a416e1d5",
    "metadata": {},
    "outputs": [],
@@ -973,7 +1000,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
