--- a/Python Fundamentals.ipynb
+++ b/Python Fundamentals.ipynb
@@ -392,6 +392,48 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e17a832e-78e5-4d88-af1f-254c907bb540",
+   "metadata": {},
+   "source": [
+    "## NoneType"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e36e6a68-edb0-4341-97f4-f3c3352b8380",
+   "metadata": {},
+   "source": [
+    "NoneType is only the type of one object: `None`. There is only one `None` object, so all variables assigned to `None` points to the same object."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "ec0de2d0-2929-44d9-95c3-bf8aa8660f7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'NoneType'>\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = None\n",
+    "b = None\n",
+    "\n",
+    "# Check the type of `a`.\n",
+    "print(type(a))\n",
+    "\n",
+    "# Confirm that both variables point to the same object.\n",
+    "print(a is b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "dc45077a-d10e-4f3c-b6a6-d19405e69147",
    "metadata": {
     "tags": []
