Added Tuple Unpacking.

--- a/Python Fundamentals.ipynb
+++ b/Python Fundamentals.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "da5dab75-2997-4ec2-a8dc-d6a16ca7db39",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "d32ba7be-6e72-4dd5-8fed-8be3fe78d567",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "89c7a7a4-ed35-4b3c-be09-b84f76b4f22a",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "cd925f1b-70be-4bf2-9f78-bbd44b24172f",
    "metadata": {},
    "outputs": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "dd517713-4e28-4de0-80f0-361332365448",
    "metadata": {},
    "outputs": [],
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "756c49c6-c38b-4cc9-a998-377978cbe6d5",
    "metadata": {},
    "outputs": [],
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "f846849a-7d5c-44c9-bd78-fe89277787fd",
    "metadata": {},
    "outputs": [],
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "67243c3b-d0a9-461d-8b23-7907e3dea184",
    "metadata": {},
    "outputs": [],
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "id": "ec0de2d0-2929-44d9-95c3-bf8aa8660f7d",
    "metadata": {},
    "outputs": [
@@ -474,11 +474,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "51a3ecbb-a710-41c2-9e26-0b0516dca5eb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['b', 'l', 'u', 'e', ',', ' ', 'p', 'u', 'r', 'p', 'l', 'e']\n"
+     ]
+    }
+   ],
    "source": [
+    "# See a list of all the characters in the string \"blue, purple\":\n",
+    "print(list(\"blue, purple\"))\n",
+    "\n",
     "# Which of the following evaluate to type `str`? Uncomment one at a time:\n",
     "# print(type(\"I'm batman.\"))\n",
     "# print(type(hello))\n",
@@ -510,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "74f3031a",
    "metadata": {},
    "outputs": [],
@@ -538,10 +549,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "e9c10ada",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n",
+      "[1, 2, 3, 4]\n",
+      "[1, 2, 3]\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a list and display it.\n",
     "example = [1, 2, 3]\n",
@@ -574,13 +595,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "5d559233",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3)\n"
+     ]
+    }
+   ],
    "source": [
     "tuple_example = (1, 2, 3)\n",
     "print(tuple_example)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5a64433-6ce0-43fc-84c7-cf38bd9a94d0",
+   "metadata": {},
+   "source": [
+    "If we write multiple items seperated with commas and do not surround it with `[` `]` or `(` `)`, Python will assume we are trying to make a tuple and turn it into one."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "9b77da36-d21e-465e-bb62-f1ec01f9d8f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('red', 'blue', 'green')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a tuple without parentheses.\n",
+    "no_paren_example = \"red\", \"blue\", \"green\"\n",
+    "print(no_paren_example)"
    ]
   },
   {
@@ -624,10 +681,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "dd64ea76-a863-4551-91f0-7d1576c6dd8b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H\n",
+      "9\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "# Display the element at index 0 in a string.\n",
     "print(\"Hello, class!\"[0])\n",
@@ -655,10 +722,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "32f34d81-6fc8-4759-912c-e87c524052bf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "?\n",
+      "orange\n",
+      "Sup?\n"
+     ]
+    }
+   ],
    "source": [
     "# Display the last element in the string.\n",
     "print(\"How are you?\"[-1])\n",
@@ -680,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "1d151901-3e9b-4302-9340-18aef98f2751",
    "metadata": {},
    "outputs": [],
@@ -730,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "id": "e94c8d65-443d-4b50-a39a-b0bec7580a4a",
    "metadata": {},
    "outputs": [
@@ -768,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "id": "6f53658f-7d28-43d1-bc53-658e1a39ae9b",
    "metadata": {},
    "outputs": [
@@ -779,7 +856,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[12], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m example_string \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHello\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# Try to change the H into a B.\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m example_string[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mB\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
+      "Cell \u001b[1;32mIn[20], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m example_string \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHello\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# Try to change the H into a B.\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m example_string[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mB\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
       "\u001b[1;31mTypeError\u001b[0m: 'str' object does not support item assignment"
      ]
     }
@@ -807,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "id": "d96d875e-2023-45f9-bfa3-8c771cc4d52c",
    "metadata": {},
    "outputs": [
@@ -838,11 +915,169 @@
   },
   {
    "cell_type": "markdown",
+   "id": "eb14d2d8-e17a-41dd-a983-c1ac818674b7",
+   "metadata": {},
+   "source": [
+    "#### Unpacking"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31459621-ac2f-494f-aab2-b4164a26f156",
+   "metadata": {},
+   "source": [
+    "When we create a sequence, we \"pack\" the elements into the object. Unpacking is the process of getting those elements back out of the sequence so we can use them in variables. While this works with any sequence type, it is generally only used with tuples, and is often referred to as **tuple unpacking**."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "697d9571-1cf5-4e4a-8bea-2018c23d763a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lola likes the color blue and is 14 years old.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Assign three variables a value at once using tuple unpacking.\n",
+    "name, age, favorite_color = (\"Lola\", 14, \"blue\")\n",
+    "# Display the values inside each variable.\n",
+    "print(f\"{name} likes the color {favorite_color} and is {age} years old.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "26e0403f-db07-451e-964b-7db2f9d73db4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "steak\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a tuple of foods.\n",
+    "foods = (\"cereal\", \"sandwich\", \"steak\")\n",
+    "# Unpack the tuple into three variables.\n",
+    "breakfast, lunch, dinner = foods\n",
+    "\n",
+    "# Display the object that the dinner variable references.\n",
+    "print(dinner)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "b6d260cd-b2e1-4998-9967-d25ca1e1b0bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_of_tuples = [(\"a\", \"b\", \"c\"), (4, 5, 6), (7, 8, 9)]\n",
+    "# Unpack the first tuple in the list.\n",
+    "first_elem, second_elem, third_elem = list_of_tuples[0]\n",
+    "print(second_elem)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "854e68e5-b2e4-455a-8d52-30309a924c4a",
+   "metadata": {},
+   "source": [
+    "Since tuples can be created without explicitly typing the parentheses, we can leave them out when unpacking a tuple."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "894aa7af-97c6-48f9-9493-3dc37d94ee4e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The grass-type starter Pokémon is Bulbasaur.\n",
+      "The water-type starter Pokémon is Squirtle.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Assign four variables at once with tuple unpacking.\n",
+    "grass, fire, water, electric = \"Bulbasaur\", \"Charmander\", \"Squirtle\", \"Pikachu\"\n",
+    "\n",
+    "print(f\"The grass-type starter Pokémon is {grass}.\")\n",
+    "print(f\"The water-type starter Pokémon is {water}.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed50e346-cd54-4a84-acb1-06b0b2ba929f",
+   "metadata": {},
+   "source": [
+    "Tuple unpacking is also very useful for swapping variables."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "32e8a2cf-f059-46e7-bd68-846992d908a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before the swap:\n",
+      "num1 is now 100, and num2 is now 7.\n",
+      "\n",
+      "After the swap:\n",
+      "num1 is now 7, and num2 is now 100.\n"
+     ]
+    }
+   ],
+   "source": [
+    "num1 = 100\n",
+    "num2 = 7\n",
+    "\n",
+    "print(\"Before the swap:\")\n",
+    "print(f\"num1 is now {num1}, and num2 is now {num2}.\")\n",
+    "print()\n",
+    "\n",
+    "# Evaluate the variables on the right (num2, num1), then put those values into the variables on the left (num1, num2).\n",
+    "num1, num2 = num2, num1\n",
+    "\n",
+    "print(\"After the swap:\")\n",
+    "print(f\"num1 is now {num1}, and num2 is now {num2}.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "be47a899-5551-4353-9b87-2c4c33556fb9",
    "metadata": {},
    "source": [
     "## Other Collections\n",
-    "Sequences are ordered collections of data, which allows them to be accessed by their index. However, not all collection type objects can be accessed by their index. Some data types don't store an order at all. Two examples of unordered collections are sets and dictionaries.\n",
+    "Sequences are ordered collections of data, which allows them to be accessed by their index. However, not all collections can have their elements accessed by their index. Two collections that aren't sequences are sets and dictionaries.\n",
+    "<!-- \n",
+    "Below are two collections:\n",
+    "\n",
+    "Some data types don't store an order at all. Two examples of unordered collections are sets and dictionaries. -->\n",
     "<!-- \n",
     "When you create a string, for example, the characters are all order\n",
     "\n",
@@ -879,18 +1114,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "1eec5187-8882-4b13-af30-4917a7bd1f88",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{1, 2, 3}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create a set with duplicates.\n",
     "example_set = {2, 2, 1, 3}\n",
@@ -926,19 +1153,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "7d296ec4-7b8b-4b08-bc58-ac24cac23df6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "black\n",
-      "24\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "person_info = {\"name\": \"Sawyer\", \"age\": 24, \"favorite color\": \"black\"}\n",
     "\n",
@@ -957,22 +1175,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "ddf3011d-2aaa-48e6-a793-b97602a93a8a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "H\n",
-      "e\n",
-      "l\n",
-      "l\n",
-      "o\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create a dictionary where the keys are numbers and the values are the letters they secretly mean.\n",
     "secret_message_dict = {18: \"o\", 1: \"H\", 22: \"r\", 5: \"l\", 23: \"e\", 42: \"x\"}\n",
@@ -997,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "d1c6bf4c-2334-4ca3-b0b7-0803a416e1d5",
    "metadata": {},
    "outputs": [],
